app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
@import 'bootstrap';

/* Move this section of code to welcome scss */
html,
body {
  height: 100%;
}

// body {
//   display: -ms-flexbox;
//   display: flex;
//   -ms-flex-align: center;
//   align-items: center;
//   padding-top: 40px;
//   padding-bottom: 40px;
//   background-color: #f5f5f5;
// }

.form-signin {
  width: 100%;
  max-width: 330px;
  padding: 15px;
  margin: auto;
}
.form-signin .checkbox {
  font-weight: 400;
}
.form-signin .form-control {
  position: relative;
  box-sizing: border-box;
  height: auto;
  padding: 10px;
  font-size: 16px;
}
.form-signin .form-control:focus {
  z-index: 2;
}
.form-signin input[type="email"] {
  margin-bottom: -1px;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.form-signin input[type="password"] {
  margin-bottom: 10px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
/* Everything down to here goes to welcome.scss */
header {
  position: relative;
  height: 100%;
  padding-top: 5px;
  display: inline-block;
  width: 100%;
  text-align: center;
}

.add-note {
	float:right;
  margin-bottom: 5px;
  font-weight: bold;
  margin-top: 0px;
  text-align:left;
  display:inline
}

.login-button {
  float: left;
  margin-bottom: 5px;
  font-weight: bold;
  margin-top: 0px;
  text-align:left;
  display:inline
}

.search-bar {
  text-align: center;
  position: relative;
  margin-bottom: 5px;
  display: block;
  width: 100%;
}

/* Everything here goes into note.scss */
.card-design { 
  //margin-left: 14px;
}

.even-card {
  //background: #95b59b22;
  background: #f1c40f22
}
.odd-card {
  //background: #3498db22;
  background: #e67e2222

}
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #e67e2222;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

.text-area {
  border: none;
  border-right: 1px solid #ccc;
  outline: none;
  background-color: #F8ECC2;
  font-size: 14px;
  font-family: 'Monaco', courier, monospace;
  padding: 10px;
}

.title-area {
  border: none;
  border-right: 1px solid #ccc;
  outline: none;
  background-color: #F8ECC2;
  font-size: 14px;
  font-family: 'Monaco', courier, monospace;
  padding: 10px; 
}

.tag-area {
  border: none;
  border-right: 1px solid #ccc;
  outline: none;
  background-color: #F8ECC2;
  font-size: 14px;
  font-family: 'Monaco', courier, monospace;
  padding: 10px; 
}

